Fixed Text OverFlowed

--- a/css/index.css
+++ b/css/index.css
@@ -34,5 +34,5 @@ body{
 	width: 100%;
 	height: auto;
 	padding: 1rem;
-	overflow-wrap: wrap;
+	word-break: break-all;
 }
